--- a/src/assets/css/_header.scss
+++ b/src/assets/css/_header.scss
@@ -39,7 +39,7 @@
       margin-bottom: 0;
       font-size: 14px;
       font-weight: 600;
-      color: #22292f;
+      color: #ffffff;
     }
     @media #{$mdWidth} {
       display: none;
@@ -169,12 +169,12 @@
     h2 {
       margin-top: 140px;
       font-size: 56px;
-      color: #22292f;
+      color: #ffffff;
     }
     & > p {
       margin-top: 20px;
       font-size: 20px;
-      color: #7a7f82;
+      color: #d6d6d6;
       width: 532px;
     }
     &__img {
@@ -182,7 +182,7 @@
       display: flex;
       justify-content: flex-start;
       p {
-        color: #22292f;
+        color: #ffffff;
         font-size: 20px;
       }
       img {
@@ -214,12 +214,12 @@
     justify-content: inherit;
     align-items: center;
     position: relative;
-    color: #000;
+    color: rgb(255, 255, 255);
     transition: 1s;
     // width: 100%;
     height: 38px;
     padding: 0 16px;
-    background: #d4e9e2;
+    background: #8b8b8b;
     border-radius: 5px;
 
     @media #{$desktop} {
@@ -400,7 +400,7 @@
       display: none;
       margin: 20px -20px 0;
       padding-top: 72px;
-      border-top: 1px solid rgba(255, 255, 255, 0.1);
+      border-top: 1px solid rgba(219, 219, 219, 0.1);
     }
     @media #{$xsWidth} {
       display: none;
@@ -409,7 +409,7 @@
       border-top: 1px solid rgba(255, 255, 255, 0.1);
     }
     .active {
-      color: #0f8c20;
+      color: #ffffff;
     }
     &-wrapper {
       display: flex;
