--- a/src/assets/css/_farm-index.scss
+++ b/src/assets/css/_farm-index.scss
@@ -99,11 +99,14 @@
     min-width: 1080px;
     background: #fff;
     height: 100%;
+    background-color: #121212;
     .farm_box_main {
       min-height: calc(100% - 80px);
     }
     .footer {
       position: relative;
+      background-color: #040404 !important;
+      border:0 !important;
     }
   }
   .farm_index {
